Fix form msg name and header centering on mobile

--- a/themes/iris/static/css/style.css
+++ b/themes/iris/static/css/style.css
@@ -222,6 +222,7 @@ a {
 	grid-row-start: 1;
 	text-align: center;
 	align-self: center;
+	margin: auto;
 	font-family: 'DandeleonVintageDemo', sans-serif;
 	font-size: var(--font-size-large);
 	/*color: black;*/
